syntax = "proto3";

package user;

option go_package = "user-service/pkg/gen/user;userpb";

import "google/protobuf/empty.proto";

service UserService {
    rpc Register (RegisterRequest) returns (UserResponse);
    rpc Login (LoginRequest) returns (LoginResponse);
    rpc GetProfile (ProfileRequest) returns (UserResponse);
    rpc GetAllProfiles (google.protobuf.Empty) returns (UserListResponse);
    rpc DeleteUser (ProfileRequest) returns (google.protobuf.Empty);
}

message RegisterRequest {
    string email = 1;
    string password = 2;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message ProfileRequest {
    string user_id = 1;
}

message UserResponse {
    string id = 1;
    string email = 2;
}

message LoginResponse {
    string access_token = 1;
    string refresh_token = 2;
    UserResponse user = 3;
}

message UserListResponse {
    repeated UserResponse users = 1;
}
